Fix .content width on smaller screens (IE9).
See #1

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -906,7 +906,6 @@ nav a, .menu a, .header a, .edy-cbtn, .edy-btn-cm-round, .edys-gallery-item,
 }
 .no-flexbox .content {
   display: table;
-  width: 100%;
   vertical-align: top;
 }
 
