--- a/stylesheets/scss/_content.scss
+++ b/stylesheets/scss/_content.scss
@@ -28,7 +28,6 @@
 
   .no-flexbox & {
     display: table;
-    width: 100%;
     vertical-align: top;
   }
 }
